added html stuff

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <p id="header-text">Ebistu's library</p>
+        <button id="add-book">Add book</button>
+    </div>
+    <div class="content">
+        <div class="book-item" id="book1">
+            <p id="book-item-name">Book number 1</p>
+            <p id="book-item-page-amounts">500</p>
+            <p id="book-item-read">Read</p>
+            <button id="book-item-read-button">Read</button>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
