did css on the index page

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     </div>
     <div class="content">
         <div class="book-item" id="book1">
-            <p id="book-item-name">Book number 1</p>
-            <p id="book-item-page-amounts">500</p>
-            <p id="book-item-read">Read</p>
-            <button id="book-item-read-button">Read</button>
+            <p class="book-item-text" id="book-item-name">Book number 1</p>
+            <p class="book-item-text" id="book-item-page-amount-text">Pages: </p>
+            <p class="book-item-text" id="book-item-page-amount-value">500</p>
+            <p class="book-item-text" id="book-item-read-text">Read: </p>
+            <p class="book-item-text" id="book-item-read-value">Yes</p>
+            <div class="book-item-button"><button id="book-item-read-button">Read</button></div>
         </div>
     </div>
     <script src="app.js"></script>
