--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <p id="header-text">Ebistu's library</p>
+        <p id="header-text">Jojo's library</p>
         <button id="add-book">Add book</button>
     </div>
     <div class="content">
@@ -20,6 +20,8 @@
             <p class="book-item-text" id="book-item-read-value">Yes</p>
             <div class="book-item-button"><button id="book-item-read-button">Read</button></div>
         </div>
+ 
+ 
     </div>
     <script src="app.js"></script>
 </body>
